compiler/testData/diagnostics/tests/incrementOnErrorCallable.kt
val a: Int
    get() = 10

fun test() {
    a.<!UNRESOLVED_REFERENCE!>shrek<!>.<!DEBUG_INFO_MISSING_UNRESOLVED!>brek<!> <!ASSIGNMENT_OPERATOR_SHOULD_RETURN_UNIT, DEBUG_INFO_MISSING_UNRESOLVED!>+=<!> 10
}
